test/errors/templates_error/zs/instantiate_type_cycle_error.zs
package instantiate_type_cycle_error;

instantiate Template<uint32> Template;
